# feuernetz

./: .gitignore  README.md  config.ini  einsatzauswertung.py  fn_data.py  init.py  jahresbericht.py  personalauswertung.py  pyproject.toml  requirements.txt  rollenauswertung.py  wasserentnahme.py
database/: database.py  fn_config.py
report/: data.typ  einsatzauswertung.typ  personalauswertung.typ
